# finch

./: .gitignore  AUTH_DATA_FLOW.md  BACKGROUND_SYNC.md  BEFORE_AFTER_COMPARISON.md  CLAUDE.md  CLAUDE_SCHEMA_FIX.md  CODE_STRATEGY_SYSTEM.md  CUSTOM_STRATEGY_SYSTEM.md  DATABASE_FILES_MIGRATION.md  DEPLOYMENT.md  DESIGN_PHILOSOPHY.md  DOME_API_FIXES.md  DOME_API_IMPLEMENTATION.md  DOME_MATCHING_IMPLEMENTATION.md  DOME_MATCHING_README.md  FINAL_DATABASE_FILES_SUMMARY.md  FINAL_SUMMARY.md  FMP_API_SUMMARY.md  GOOGLE_AUTH_SETUP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSIDER_TRADING.md  LICENSE  MARKDOWN_SUPPORT_ADDED.md  MIGRATION_STEPS.md  MULTI_USER_AUTH_PLAN.md  MVP_IMPLEMENTATION_PLAN.md  MVP_SETUP_INSTRUCTIONS.md  PLOTTING_RESOURCE_UPDATE.md  PLOTTING_SYSTEM.md  PRODUCT_REDESIGN.md  QUICKSTART.md  README.md  ROBINHOOD_INTEGRATION.md  SESSION_SUMMARY.md  SNAPTRADE_API_UPDATE.md  SSE_EVENTS_GUIDE.md  SSE_IMPLEMENTATION_SUMMARY.md  SSE_QUICK_REFERENCE.md  SSE_STREAMING_PATTERN.md  (+22 more)
backend/: AGENT_LOOP_ANALYSIS.md  AGENT_REFACTOR_COMPLETE.md  AGENT_REFACTOR_PLAN.md  ARCHITECTURE.md  CHATAGENT_REFACTOR_COMPLETE.md  CHAT_HISTORY_FIX.md  CHAT_HISTORY_USAGE.md  CLEANUP_SUMMARY.md  CLEAN_ARCHITECTURE.md  CREDITS_SYSTEM.md  DATABASE_SETUP_GUIDE.md  FINAL_ARCHITECTURE.md  LANGCHAIN_COMPARISON.md  README.md  REFACTORING_COMPLETE.md  SSE_STREAMING_ARCHITECTURE.md  TOOLS_SYSTEM.md  TOOL_STREAMING_EXAMPLE.md  agent.py  (+20 more)
finch-connect/src-tauri/: Cargo.toml  tauri.conf.json
finch-connect/src-tauri/icons/: icon.icns
finch-connect/src-tauri/src/: lib.rs  main.rs
(+939 files in other folders)
