[package]
name = "finch-connect"
version = "0.1.0"
description = "Finch Connect — link your Robinhood Agentic account to Finch, on-device."
authors = ["Finch"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "finch_connect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP client (rustls, no system OpenSSL needed → clean cross-platform builds).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
# PKCE (RFC 7636) + encoding + randomness. Small, well-known crates — easy to audit.
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

